# starter-auth/docs/swagger.yaml
@@ -13,6 +13,9 @@ definitions:
     type: object
   vo.TenantCreateReqVO:
     properties:
+      redirectUrl:
+        description: 授权码重定向路径，非必要
+        type: string
       tenantID:
         description: 租户ID，不传默认则随机生成
         type: string
@@ -94,7 +97,7 @@ paths:
       parameters:
       - description: 租户ID
         in: header
-        name: Tenant-ID
+        name: '"Tenant-ID"'
         required: true
         type: string
       - description: 用户登录获得授权码，注意授权码不是Token，不能直接用于访问接口
@@ -115,7 +118,7 @@ paths:
                 data:
                   $ref: '#/definitions/vo.UserAuthorizationCodeRspVO'
               type: object
-      summary: 用户登录获得授权码，注意授权码不是Token，不能直接用于访问接口
+      summary: 登录验证用户账号密码，验证通过后在Redis保存一个授权码60秒有效，关联用户信息。用以可以用授权码接口换取登录Token。
       tags:
       - auth
 swagger: "2.0"
